@@ -11,13 +11,76 @@ will load B twice if A depends on B.
 This repository attempts to reproduce this reliably to demonstrate
 that `lein test`'s use of require :reload [here](https://github.com/technomancy/leiningen/blob/df7122f6aa5599f515b66522ade87c92777b25f2/src/leiningen/test.clj#L86) is problematic.
 
+## Bug report
+
+**Initial debugging steps**
+Before creating a report, _especially_ around exceptions being thrown when running Leiningen, please check if the error still occurs after:
+
+- [x] Updating to using the latest released version of Leiningen (`lein upgrade`).
+- [x] Moving your `~/.lein/profiles.clj` (if present) out of the way. This contains third-party dependencies and plugins that can cause problems inside Leiningen.
+- [x] Updating any old versions of plugins in your `project.clj`, especially if the problem is with a plugin not working. Old versions of plugins like nREPL and CIDER (as well as others) can cause problems with newer versions of Leiningen.
+- [x] (If you are using Java 9 or newer), updating your dependencies to their most recent versions. Recent JDK's have introduced changes which can break some Clojure libraries.
+
+**Describe the bug**
+`lein test` can reload namespaces out of order. This can leave deftypes implementing
+expired protocol interfaces, and thus an exception will be thrown if 
+
+**To Reproduce**
+The cause of this bug is that `lein test` uses clojure.core/require's :reload flag.
+
+Working backwards from there, a simple way to make `require :reload`
+reload things out of order is to call
+
+```
+(require :reload 'A 'B)
+```
+
+where A depends on B. B will be loaded twice, first as a 
+dependency of A, then via the `:reload` logic.
+
+If B contains a protocol and A contains a deftype, then
+the deftype will implement a now-stale interface.
+
+A full reproduction of this scenario is demonstrated [here](https://github.com/frenchy64/lein-test-reload-bug),
+and can be triggered with `lein test`.
+
+**Actual behavior**
+
+
+**Expected behavior**
+A clear and concise description of what you expected to happen.
+
+**Link to sample project**
+https://github.com/frenchy64/lein-test-reload-bug
+
+**Logs**
+If applicable, add logs to help explain your problem, including the command that you ran. If the logs are very large, please put them in a [gist](https://gist.github.com/).
+
+**Environment**
+- Leiningen Version: `Leiningen 2.9.5 on Java 1.8.0_275 OpenJDK 64-Bit Server VM`
+- Leiningen installation method: manual
+- JDK Version:
+```
+openjdk version "1.8.0_275"
+OpenJDK Runtime Environment (AdoptOpenJDK)(build 1.8.0_275-b01)
+OpenJDK 64-Bit Server VM (AdoptOpenJDK)(build 25.275-b01, mixed mode)
+```
+- OS: macOS 10.15.7
+
+**Additional context**
+
 ## Usage
 
 See `lein-test-reload-bug.core-test` for explanation.
 
-```clojure
-~/Projects/lein-test-reload-bug master !6 ❯ lein test                                                                                                    4s vim
-OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
+```
+~/Projects/lein-test-reload-bug master !1 ❯ lein version                                                                                                    
+Leiningen 2.9.5 on Java 1.8.0_275 OpenJDK 64-Bit Server VM
+~/Projects/lein-test-reload-bug master !1 ❯ java -version                                                                                                   
+openjdk version "1.8.0_275"
+OpenJDK Runtime Environment (AdoptOpenJDK)(build 1.8.0_275-b01)
+OpenJDK 64-Bit Server VM (AdoptOpenJDK)(build 25.275-b01, mixed mode)
+~/Projects/lein-test-reload-bug master !1 ❯ lein test                                                                                                       
 "loading" lein-test-reload-bug.a-deftype
 "loading" lein-test-reload-bug.b-protocol
 "loading" lein-test-reload-bug.a-protocol
@@ -37,8 +100,8 @@ _bug.a_deftype.A
  at clojure.core$_cache_protocol_fn.invokeStatic (core_deftype.clj:583)
     clojure.core$_cache_protocol_fn.invoke (core_deftype.clj:575)
     lein_test_reload_bug.b_protocol$eval473$fn__474$G__464__479.invoke (b_protocol.clj:5)
-    lein_test_reload_bug.core_test$fn__502.invokeStatic (core_test.clj:34)
-    lein_test_reload_bug.core_test/fn (core_test.clj:28)
+    lein_test_reload_bug.core_test$fn__502.invokeStatic (core_test.clj:37)
+    lein_test_reload_bug.core_test/fn (core_test.clj:31)
     clojure.test$test_var$fn__9737.invoke (test.clj:717)
     clojure.test$test_var.invokeStatic (test.clj:717)
     clojure.test$test_var.invoke (test.clj:708)
@@ -52,18 +115,18 @@ _bug.a_deftype.A
     clojure.test$test_all_vars.invokeStatic (test.clj:737)
     clojure.test$test_ns.invokeStatic (test.clj:758)
     clojure.test$test_ns.invoke (test.clj:743)
-    user$eval224$fn__287.invoke (form-init5634774907020355671.clj:1)
+    user$eval224$fn__287.invoke (form-init7833296088705208924.clj:1)
     clojure.lang.AFn.applyToHelper (AFn.java:156)
     clojure.lang.AFn.applyTo (AFn.java:144)
     clojure.core$apply.invokeStatic (core.clj:667)
     clojure.core$apply.invoke (core.clj:660)
-    leiningen.core.injected$compose_hooks$fn__154.doInvoke (form-init5634774907020355671.clj:1)
+    leiningen.core.injected$compose_hooks$fn__154.doInvoke (form-init7833296088705208924.clj:1)
     clojure.lang.RestFn.applyTo (RestFn.java:137)
     clojure.core$apply.invokeStatic (core.clj:665)
     clojure.core$apply.invoke (core.clj:660)
-    leiningen.core.injected$run_hooks.invokeStatic (form-init5634774907020355671.clj:1)
-    leiningen.core.injected$run_hooks.invoke (form-init5634774907020355671.clj:1)
-    leiningen.core.injected$prepare_for_hooks$fn__159$fn__160.doInvoke (form-init5634774907020355671.clj:1)
+    leiningen.core.injected$run_hooks.invokeStatic (form-init7833296088705208924.clj:1)
+    leiningen.core.injected$run_hooks.invoke (form-init7833296088705208924.clj:1)
+    leiningen.core.injected$prepare_for_hooks$fn__159$fn__160.doInvoke (form-init7833296088705208924.clj:1)
     clojure.lang.RestFn.applyTo (RestFn.java:137)
     clojure.lang.AFunction$1.doInvoke (AFunction.java:31)
     clojure.lang.RestFn.invoke (RestFn.java:408)
@@ -79,11 +142,11 @@ _bug.a_deftype.A
     clojure.lang.RestFn.applyTo (RestFn.java:137)
     clojure.core$apply.invokeStatic (core.clj:665)
     clojure.core$apply.invoke (core.clj:660)
-    user$eval224$fn__299$fn__332.invoke (form-init5634774907020355671.clj:1)
-    user$eval224$fn__299$fn__300.invoke (form-init5634774907020355671.clj:1)
-    user$eval224$fn__299.invoke (form-init5634774907020355671.clj:1)
-    user$eval224.invokeStatic (form-init5634774907020355671.clj:1)
-    user$eval224.invoke (form-init5634774907020355671.clj:1)
+    user$eval224$fn__299$fn__332.invoke (form-init7833296088705208924.clj:1)
+    user$eval224$fn__299$fn__300.invoke (form-init7833296088705208924.clj:1)
+    user$eval224$fn__299.invoke (form-init7833296088705208924.clj:1)
+    user$eval224.invokeStatic (form-init7833296088705208924.clj:1)
+    user$eval224.invoke (form-init7833296088705208924.clj:1)
     clojure.lang.Compiler.eval (Compiler.java:7177)
     clojure.lang.Compiler.eval (Compiler.java:7167)
     clojure.lang.Compiler.load (Compiler.java:7636)
@@ -103,6 +166,7 @@ _bug.a_deftype.A
 Ran 1 tests containing 1 assertions.
 0 failures, 1 errors.
 Tests failed.
+~/Projects/lein-test-reload-bug master !1 ❮                                                                                                              3s 
 ```
 
 ## License
